--- a/pages/adaptation.html
+++ b/pages/adaptation.html
@@ -11,23 +11,114 @@
 
 <body>
   <aside>
-        <nav class="navigation">
-                <div class="navlink intro"><a href="/index.html">Introduction</a></div>
-                <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
-                <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
-                <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
-                <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
-                <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
-                <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
-                <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
-                <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
-                <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
-                <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
-        </nav>
-    </aside>
-  <h1>
-    Adaptations
-  </h1>
+    <nav class="navigation">
+      <div class="navlink intro"><a href="/index.html">Introduction</a></div>
+      <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
+      <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
+      <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
+      <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
+      <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
+      <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
+      <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
+      <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
+      <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
+      <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
+    </nav>
+  </aside>
+  <header class="main-header">
+    <h1>Harry Potter</h1>
+  </header>
+  <div id="container">
+    <main class="main_content">
+      <h2>Adaptations</h2>
+      <h3>Films</h3>
+      <div class="img1" <figure>
+        <img src="../img/Hogwarts_express.jpg" alt="Hogwarts_express">
+        <figcaption>
+          The locomotive that features as the "Hogwarts Express" in the film series.
+        </figcaption>
+        </figure>
+      </div>
+      <p>
+        In 1998, Rowling sold the film rights of the first four Harry Potter books to Warner Bros. for a reported £1 million ($1,982,900).[173][174] Rowling demanded the principal cast be kept strictly British, nonetheless allowing for the inclusion
+        of Irish actors such as the late Richard Harris as Dumbledore, and for casting of French and Eastern European actors in Harry Potter and the Goblet of Fire where characters from the book are specified as such.[175] After many directors
+        including Steven Spielberg, Terry Gilliam, Jonathan Demme, and Alan Parker were considered, Chris Columbus was appointed on 28 March 2000 as the director for Harry Potter and the Philosopher's Stone (titled "Harry Potter and the Sorcerer's
+        Stone" in the United States), with Warner Bros. citing his work on other family films such as Home Alone and Mrs. Doubtfire and proven experience with directing children as influences for their decision.[176]
+      </p>
+      <p>
+        After extensive casting, filming began in October 2000 at Leavesden Film Studios and in London itself, with production ending in July 2001.[177][178] Philosopher's Stone was released on 14 November 2001. Just three days after the film's
+        release, production for Harry Potter and the Chamber of Secrets, also directed by Columbus, began. Filming was completed in summer 2002, with the film being released on 15 November 2002.[179] Daniel Radcliffe portrayed Harry Potter, doing so
+        for all succeeding films in the franchise.
+      </p>
+      <p>
+        Columbus declined to direct Harry Potter and the Prisoner of Azkaban, only acting as producer. Mexican director Alfonso Cuarón took over the job, and after shooting in 2003, the film was released on 4 June 2004. Due to the fourth film
+        beginning its production before the third's release, Mike Newell was chosen as the director for Harry Potter and the Goblet of Fire, released on 18 November 2005.[180] Newell became the first British director of the series, with television
+        director David Yates following suit after he was chosen to helm Harry Potter and the Order of the Phoenix. Production began in January 2006 and the film was released the following year in July 2007.[181] After executives were "really
+        delighted" with his work on the film, Yates was selected to direct Harry Potter and the Half-Blood Prince, which was released on 15 July 2009.
+      </p>
+      <div class="img1" <figure>
+        <img src="../img/Hogwarts_model.jpg" alt="Hogwarts_studio_model">
+        <figcaption>
+          A studio model of Hogwarts Castle as it appears in the films.
+        </figcaption>
+        </figure>
+      </div>
+      <p>
+        In March 2008, Warner Bros. President and COO Alan F. Horn announced that the final instalment in the series, Harry Potter and the Deathly Hallows, would be released in two cinematic parts: Part 1 on 19 November 2010 and Part 2 on 15 July
+        2011. Production of both parts started in February 2009, with the final day of principal photography taking place on 12 June 2010.[186][187]
+      </p>
+      <p>
+        Rowling had creative control on the film series, observing the filmmaking process of Philosopher's Stone and serving as producer on the two-part Deathly Hallows, alongside David Heyman and David Barron.[188] The Harry Potter films have been
+        top-rank box office hits, with all eight releases on the list of highest-grossing films worldwide. Philosopher's Stone was the highest-grossing Harry Potter film up until the release of the final instalment of the series, Deathly Hallows Part
+        2, while Prisoner of Azkaban grossed the least.[189] As well as being a financial success, the film series has also been a success among film critics.[190][191]
+      </p>
+      <p>
+        Opinions of the films are generally divided among fans, with one group preferring the more faithful approach of the first two films, and another group preferring the more stylised character-driven approach of the later films.[192] Rowling has
+        been constantly supportive of all the films and evaluated Deathly Hallows as her "favourite one" in the series.[193][194][195][196] She wrote on her website of the changes in the book-to-film transition, "It is simply impossible to
+        incorporate every one of my storylines into a film that has to be kept under four hours long. Obviously films have restrictions novels do not have, constraints of time and budget; I can create dazzling effects relying on nothing but the
+        interaction of my own and my readers' imaginations".[197]
+      </p>
+      <p>
+        At the 64th British Academy Film Awards in February 2011, Rowling was joined by producers David Heyman and David Barron along with directors David Yates, Alfonso Cuarón and Mike Newell in collecting the Michael Balcon Award for Outstanding
+        British Contribution to Cinema on behalf of all the films in the series. Actors Rupert Grint and Emma Watson, who play main characters Ron Weasley and Hermione Granger, were also in attendance.
+      </p>
+      <h3>Spin-off prequels</h3>
+      <p>
+        A new prequel series consisting of five films will take place before the main series.[200] The first film Fantastic Beasts and Where to Find Them was released in November 2016, followed by the second Fantastic Beasts: The Crimes of
+        Grindelwald in November 2018; the next three are due to be released in 2021, 2022 and 2024 respectively.[201] Rowling wrote the screenplay for the first three installments,[202] marking her foray into screenwriting.
+      </p>
+      <h3>Games</h3>
+      <p>
+        A number of other non-interactive media games and board games have been released such as Cluedo Harry Potter Edition, Scene It? Harry Potter and Lego Harry Potter models, which are influenced by the themes of both the novels and films.
+      </p>
+      <p>
+        There are thirteen Harry Potter video games, eight corresponding with the films and books and five spin-offs. The film/book-based games are produced by Electronic Arts, as was Harry Potter: Quidditch World Cup, with the game version of the
+        first entry in the series, Philosopher's Stone, being released in November 2001. Harry Potter and the Philosopher's Stone went on to become one of the best-selling PlayStation games ever.[203] The video games were released to coincide with
+        the films, containing scenery and details from the films as well as the tone and spirit of the books. Objectives usually occur in and around Hogwarts, along with various other magical areas. The story and design of the games follow the
+        selected film's characterisation and plot; EA worked closely with Warner Bros. to include scenes from the films. The last game in the series, Deathly Hallows, was split, with Part 1 released in November 2010 and Part 2 debuting on consoles in
+        July 2011. The two-part game forms the first entry to convey an intense theme of action and violence, with the gameplay revolving around a third-person shooter style format.
+      </p>
+      <p>
+        The spin-off games Lego Harry Potter: Years 1–4 and Lego Harry Potter: Years 5–7 were developed by Traveller's Tales and published by Warner Bros. Interactive Entertainment. The spin-off games Book of Spells and Book of Potions were developed
+        by SCE London Studio and use the Wonderbook, an augmented reality book designed to be used in conjunction with the PlayStation Move and PlayStation Eye.[206] The Harry Potter universe is also featured in Lego Dimensions, with the settings and
+        side characters featured in the Harry Potter Adventure World, and Harry, Voldemort, and Hermione as playable characters. In 2017, Warner Bros. Interactive Entertainment opened its own Harry Potter themed game design studio, by the name of
+        Portkey Games; before releasing Hogwarts Mystery in 2018, developed by Jam City.
+      </p>
+      <h3>Audiobooks</h3>
+      <p>
+        All seven Harry Potter books have been released in unabridged audiobook versions, with Stephen Fry reading the UK editions and Jim Dale voicing the series for the American editions.
+      </p>
+      <h3>Stage production</h3>
+      <p>
+        Harry Potter and the Cursed Child: Parts I and II is a play which serves as a sequel to the books, beginning nineteen years after the events of Harry Potter and the Deathly Hallows. It was written by Jack Thorne based on an original new story
+        by Thorne, Rowling and John Tiffany.[210] It has run at the Palace Theatre in London's West End since previews began on 7 June 2016 with an official premiere on 30 June 2016.[211] The first four months of tickets for the June–September
+        performances were sold out within several hours upon release.[212] Forthcoming productions are planned for Broadway[213] and Melbourne.[214]
+      </p>
+      <p>
+        The script was released as a book at the time of the premiere, with a revised version following the next year.
+      </p>
+    </main>
+  </div>
 </body>
 
 </html>
