--- a/pages/origins.html
+++ b/pages/origins.html
@@ -11,23 +11,40 @@
 
 <body>
   <aside>
-        <nav class="navigation">
-                <div class="navlink intro"><a href="/index.html">Introduction</a></div>
-                <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
-                <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
-                <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
-                <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
-                <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
-                <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
-                <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
-                <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
-                <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
-                <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
-        </nav>
-    </aside>
-  <h1>
-    Origins
-  </h1>
+    <nav class="navigation">
+      <div class="navlink intro"><a href="/index.html">Introduction</a></div>
+      <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
+      <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
+      <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
+      <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
+      <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
+      <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
+      <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
+      <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
+      <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
+      <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
+    </nav>
+  </aside>
+  <header class="main-header">
+    <h1>Harry Potter</h1>
+  </header>
+  <div id="container">
+    <main class="main_content">
+      <h2>Origins</h2>
+      <p>
+        In 1990, Rowling was on a crowded train from Manchester to London when the idea for Harry suddenly "fell into her head". Rowling gives an account of the experience on her website saying:[55]
+      </p>
+      <p class="grey_font">
+        I had been writing almost continuously since the age of six but I had never been so excited about an idea before. I simply sat and thought, for four (delayed train) hours, and all the details bubbled up in my brain, and this scrawny,
+        black-haired, bespectacled boy who did not know he was a wizard became more and more real to me.
+      </p>
+      <p>
+        Rowling completed Harry Potter and the Philosopher's Stone in 1995 and the manuscript was sent off to several prospective agents.[56] The second agent she tried, Christopher Little, offered to represent her and sent the manuscript to
+        Bloomsbury.
+      </p>
+    </main>
+  </div>
+
 </body>
 
 </html>
