--- a/pages/publication_history.html
+++ b/pages/publication_history.html
@@ -11,23 +11,110 @@
 
 <body>
   <aside>
-        <nav class="navigation">
-                <div class="navlink intro"><a href="/index.html">Introduction</a></div>
-                <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
-                <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
-                <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
-                <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
-                <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
-                <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
-                <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
-                <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
-                <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
-                <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
-        </nav>
-    </aside>
-  <h1>
-    Publication history
-  </h1>
+    <nav class="navigation">
+      <div class="navlink intro"><a href="/index.html">Introduction</a></div>
+      <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
+      <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
+      <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
+      <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
+      <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
+      <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
+      <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
+      <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
+      <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
+      <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
+    </nav>
+  </aside>
+  <header class="main-header">
+    <h1>Harry Potter</h1>
+  </header>
+  <div id="container">
+    <main class="main_content">
+      <h2>Publication history</h2>
+      <div class="img1" <figure>
+        <img src="../img/J_K_R.jpg" alt="J._K._Rowling">
+        <figcaption>
+          The novelist, J. K. Rowling
+        </figcaption>
+        </figure>
+      </div>
+
+      <p>
+        After eight other publishers had rejected Philosopher's Stone, Bloomsbury offered Rowling a £2,500 advance for its publication.[58][59] Despite Rowling's statement that she did not have any particular age group in mind when beginning to write
+        the Harry Potter books, the publishers initially targeted children aged nine to eleven.[60] On the eve of publishing, Rowling was asked by her publishers to adopt a more gender-neutral pen name in order to appeal to the male members of this
+        age group, fearing that they would not be interested in reading a novel they knew to be written by a woman. She elected to use J. K. Rowling (Joanne Kathleen Rowling), using her grandmother's name as her second name because she has no middle
+        name.
+      </p>
+      <p>
+        Harry Potter and the Philosopher's Stone was published by Bloomsbury, the publisher of all Harry Potter books in the United Kingdom, on 26 June 1997.[62] It was released in the United States on 1 September 1998 by Scholastic – the American
+        publisher of the books – as Harry Potter and the Sorcerer's Stone,[63] after Rowling had received US$105,000 for the American rights – a record amount for a children's book by an unknown author.[64] Fearing that American readers would not
+        associate the word "philosopher" with magic (although the Philosopher's Stone is an ancient tradition in alchemy), Scholastic insisted that the book be given the title Harry Potter and the Sorcerer's Stone for the American market.
+      </p>
+      <div class="img2 " <figure>
+        <img src="../img/HP_brit_watermark.png" alt="Harry_Potter_Britain_watermark">
+        <figcaption>
+          The logo used in British, Australian, and Canadian editions before 2010, which uses the typeface Cochin Bold.
+        </figcaption>
+        </figure>
+      </div>
+      <p>
+        The second book, Harry Potter and the Chamber of Secrets, was originally published in the UK on 2 July 1998 and in the US on 2 June 1999. Harry Potter and the Prisoner of Azkaban was published a year later in the UK on 8 July 1999 and in the
+        US on 8 September 1999.[66] Harry Potter and the Goblet of Fire was published on 8 July 2000 at the same time by Bloomsbury and Scholastic.[67] Harry Potter and the Order of the Phoenix is the longest book in the series, at 766 pages in the
+        UK version and 870 pages in the US version.[68] It was published worldwide in English on 21 June 2003.[69] Harry Potter and the Half-Blood Prince was published on 16 July 2005; it sold 9 million copies in the first 24 hours of its worldwide
+        release. The seventh and final novel, Harry Potter and the Deathly Hallows, was published on 21 July 2007.[72] The book sold 11 million copies in the first 24 hours of release, breaking down to 2.7 million copies in the UK and 8.3
+        million in the US.
+      </p>
+      <h3>Translations</h3>
+      <div class="img1" <figure>
+        <img src="../img/fans_worldwide.jpg" alt="fans_rush">
+        <figcaption>
+          The Russian translation of The Deathly Hallows goes on sale in Moscow, 2007
+        </figcaption>
+        </figure>
+      </div>
+      <p>The series has been translated into 80 languages,[3] placing Rowling among the most translated authors in history.[73] The books have seen translations to diverse languages such as Korean, Armenian, Ukrainian, Arabic, Urdu, Hindi, Bengali,
+        Bulgarian, Welsh, Afrikaans, Albanian, Latvian, Vietnamese and Hawaiian. The first volume has been translated into Latin and even Ancient Greek,[74] making it the longest published work in Ancient Greek since the novels of Heliodorus of Emesa
+        in the 3rd century AD.[75] The second volume has also been translated into Latin.
+      </p>
+      <p>
+        Some of the translators hired to work on the books were well-known authors before their work on Harry Potter, such as Viktor Golyshev, who oversaw the Russian translation of the series' fifth book. The Turkish translation of books two to
+        seven was undertaken by Sevin Okyay, a popular literary critic and cultural commentator. For reasons of secrecy, translation on a given book could only start after it had been released in English, leading to a lag of several months before
+        the translations were available. This led to more and more copies of the English editions being sold to impatient fans in non-English speaking countries; for example, such was the clamour to read the fifth book that its English language
+        edition became the first English-language book ever to top the best-seller list in France.
+      </p>
+      <p>
+        The United States editions were adapted into American English to make them more understandable to a young American audience.
+      </p>
+      <h3>Completion of the series</h3>
+      <p>
+        In December 2005, Rowling stated on her web site, "2006 will be the year when I write the final book in the Harry Potter series."[80] Updates then followed in her online diary chronicling the progress of Harry Potter and the Deathly Hallows,
+        with the release date of 21 July 2007. The book itself was finished on 11 January 2007 in the Balmoral Hotel, Edinburgh, where she scrawled a message on the back of a bust of Hermes. It read: "J. K. Rowling finished writing Harry Potter and
+        the Deathly Hallows in this room (552) on 11 January 2007."[81]
+      </p>
+      <p>
+        Rowling herself has stated that the last chapter of the final book (in fact, the epilogue) was completed "in something like 1990".[82][83] In June 2006, Rowling, on an appearance on the British talk show Richard & Judy, announced that the
+        chapter had been modified as one character "got a reprieve" and two others who previously survived the story had in fact been killed. On 28 March 2007, the cover art for the Bloomsbury Adult and Child versions and the Scholastic version were
+        released.[84][85]
+      </p>
+      <p>
+        In September 2012, Rowling mentioned in an interview that she might go back to make a "director's cut" of two of the existing Harry Potter books.
+      </p>
+      <h3>Cover art</h3>
+      <p>
+        For cover art, Bloomsbury chose painted art in a classic style of design, with the first cover a watercolour and pencil drawing by illustrator Thomas Taylor showing Harry boarding the Hogwarts Express, and a title in the font Cochin Bold.[87]
+        The first releases of the successive books in the series followed in the same style but somewhat more realistic, illustrating scenes from the books. These covers were created by first Cliff Wright and then Jason Cockroft.[88]
+      </p>
+      <p>
+        Due to the appeal of the books among an adult audience, Bloomsbury commissioned a second line of editions in an 'adult' style. These initially used black-and-white photographic art for the covers showing objects from the books (including a
+        very American Hogwarts Express) without depicting people, but later shifted to partial colourisation with a picture of Slytherin's locket on the cover of the final book.
+      </p>
+      <p>
+        International and later editions have been created by a range of designers, including Mary GrandPré for U.S. audiences and Mika Launis in Finland.[89][90] For a later American release, Kazu Kibuishi created covers in a somewhat
+        anime-influenced style.
+      </p>
+    </main>
+  </div>
+
 </body>
 
 </html>
