--- a/pages/reception.html
+++ b/pages/reception.html
@@ -11,23 +11,137 @@
 
 <body>
   <aside>
-        <nav class="navigation">
-                <div class="navlink intro"><a href="/index.html">Introduction</a></div>
-                <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
-                <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
-                <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
-                <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
-                <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
-                <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
-                <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
-                <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
-                <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
-                <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
-        </nav>
-    </aside>
-  <h1>
-    Reception
-  </h1>
+    <nav class="navigation">
+      <div class="navlink intro"><a href="/index.html">Introduction</a></div>
+      <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
+      <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
+      <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
+      <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
+      <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
+      <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
+      <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
+      <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
+      <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
+      <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
+    </nav>
+  </aside>
+  <header class="main-header">
+    <h1>Harry Potter</h1>
+  </header>
+  <div id="container">
+    <main class="main_content">
+      <h2>Reception</h2>
+      <h3>Literary criticism</h3>
+      <p>
+        Early in its history, Harry Potter received positive reviews. On publication, the first book, Harry Potter and the Philosopher's Stone, attracted attention from the Scottish newspapers, such as The Scotsman, which said it had "all the makings
+        of a classic,"[128] and The Glasgow Herald, which called it "Magic stuff."[128] Soon the English newspapers joined in, with more than one comparing it to Roald Dahl's work: The Mail on Sunday rated it as "the most imaginative debut since
+        Roald Dahl",[128] a view echoed by The Sunday Times ("comparisons to Dahl are, this time, justified"),[128] while The Guardian called it "a richly textured novel given lift-off by an inventive wit."[128]
+      </p>
+      <p>
+        By the time of the release of the fifth book, Harry Potter and the Order of the Phoenix, the books began to receive strong criticism from a number of literary scholars. Yale professor, literary scholar, and critic Harold Bloom raised
+        criticisms of the books' literary merits, saying, "Rowling's mind is so governed by clichés and dead metaphors that she has no other style of writing."[129] A. S. Byatt authored an op-ed article in The New York Times calling Rowling's
+        universe a "secondary secondary world, made up of intelligently patchworked derivative motifs from all sorts of children's literature ... written for people whose imaginative lives are confined to TV cartoons, and the exaggerated (more
+        exciting, not threatening) mirror-worlds of soaps, reality TV and celebrity gossip."
+      </p>
+      <p>
+        Michael Rosen, a novelist and poet, advocated the books were not suited for children, as they would be unable to grasp the complex themes. Rosen also stated that "J. K. Rowling is more of an adult writer."[131] The critic Anthony Holden wrote
+        in The Observer on his experience of judging Harry Potter and the Prisoner of Azkaban for the 1999 Whitbread Awards. His overall view of the series was negative – "the Potter saga was essentially patronising, conservative, highly derivative,
+        dispiritingly nostalgic for a bygone Britain," and he speaks of "a pedestrian, ungrammatical prose style."[132] Ursula K. Le Guin said, "I have no great opinion of it. When so many adult critics were carrying on about the 'incredible
+        originality' of the first Harry Potter book, I read it to find out what the fuss was about, and remained somewhat puzzled; it seemed a lively kid's fantasy crossed with a 'school novel,' good fare for its age group, but stylistically
+        ordinary, imaginatively derivative, and ethically rather mean-spirited."
+      </p>
+      <p>
+        By contrast, author Fay Weldon, while admitting that the series is "not what the poets hoped for," nevertheless goes on to say, "but this is not poetry, it is readable, saleable, everyday, useful prose."[134] The literary critic A. N. Wilson
+        praised the Harry Potter series in The Times, stating, "There are not many writers who have JK's Dickensian ability to make us turn the pages, to weep – openly, with tears splashing – and a few pages later to laugh, at invariably good jokes
+        ... We have lived through a decade in which we have followed the publication of the liveliest, funniest, scariest and most moving children's stories ever written."[135]
+      </p>
+      <p>
+        Charles Taylor of Salon.com, who is primarily a movie critic,[136] took issue with Byatt's criticisms in particular. While he conceded that she may have "a valid cultural point – a teeny one – about the impulses that drive us to reassuring
+        pop trash and away from the troubling complexities of art,"[137] he rejected her claims that the series is lacking in serious literary merit and that it owes its success merely to the childhood reassurances it offers. Taylor stressed the
+        progressively darker tone of the books, shown by the murder of a classmate and close friend and the psychological wounds and social isolation each causes. Taylor also argued that Philosopher's Stone, said to be the most light-hearted of the
+        seven published books, disrupts the childhood reassurances that Byatt claims spur the series' success: the book opens with news of a double murder, for example.[137]
+      </p>
+      <p>
+        Stephen King called the series "a feat of which only a superior imagination is capable," and declared "Rowling's punning, one-eyebrow-cocked sense of humor" to be "remarkable." However, he wrote that despite the story being "a good one," he
+        is "a little tired of discovering Harry at home with his horrible aunt and uncle," the formulaic beginning of all seven books.[38] King has also joked that "Rowling's never met an adverb she did not like!" He does however predict that Harry
+        Potter "will indeed stand time's test and wind up on a shelf where only the best are kept; I think Harry will take his place with Alice, Huck, Frodo, and Dorothy and this is one series not just for the decade, but for the ages."[138]
+      </p>
+      <p>
+        Sameer Rahim of The Daily Telegraph disagreed, saying "It depresses me to see 16 and 17 year-olds reading the series when they could be reading the great novels of childhood such as Oliver Twist or A House for Mr Biswas. What that says about
+        the adults who are fanatical fans I'm not sure – but I suspect in years to come people will make a link between our plump, comfortable, infantilising society and the popularity of Potter."[139]
+      </p>
+      <p>
+        There is ongoing discussion regarding the extent to which the series was inspired by Tolkien's Lord of the Rings books.
+      </p>
+      <h3>Social impact</h3>
+      <p>
+        Although Time magazine named Rowling as a runner-up for its 2007 Person of the Year award, noting the social, moral, and political inspiration she has given her fandom,[141] cultural comments on the series have been mixed. Washington Post
+        book critic Ron Charles opined in July 2007 that the large numbers of adults reading the Potter series but few other books may represent a "bad case of cultural infantilism", and that the straightforward "good vs. evil" theme of the series is
+        "childish". He also argued "through no fault of Rowling's", the cultural and marketing "hysteria" marked by the publication of the later books "trains children and adults to expect the roar of the coliseum, a mass-media experience that no
+        other novel can possibly provide".[142]
+      </p>
+      <p>
+        Librarian Nancy Knapp pointed out the books' potential to improve literacy by motivating children to read much more than they otherwise would.[143] The seven-book series has a word count of 1,083,594 (US edition). Agreeing about the
+        motivating effects, Diane Penrod also praised the books' blending of simple entertainment with "the qualities of highbrow literary fiction", but expressed concern about the distracting effect of the prolific merchandising that accompanies the
+        book launches.[144] However, the assumption that Harry Potter books have increased literacy among young people is "largely a folk legend."[145]
+      </p>
+      <p>
+        Research by the National Endowment for the Arts (NEA) has found no increase in reading among children coinciding with the Harry Potter publishing phenomenon, nor has the broader downward trend in reading among Americans been arrested during
+        the rise in the popularity of the Harry Potter books.[145][146] The research also found that children who read Harry Potter books were not more likely to go on to read outside the fantasy and mystery genres.[145] NEA chairman Dana Gioia said
+        the series, "got millions of kids to read a long and reasonably complex series of books. The trouble is that one Harry Potter novel every few years is not enough to reverse the decline in reading."[147]
+      </p>
+      <p>
+        Jennifer Conn used Snape's and Quidditch coach Madam Hooch's teaching methods as examples of what to avoid and what to emulate in clinical teaching,[148] and Joyce Fields wrote that the books illustrate four of the five main topics in a
+        typical first-year sociology class: "sociological concepts including culture, society, and socialisation; stratification and social inequality; social institutions; and social theory".[149]
+      </p>
+      <p>
+        From the early 2000s onwards several news reports appeared in the UK of the Harry Potter book and movie series driving demand for pet owls[150] and even reports that after the end of the movie series these same pet owls were now being
+        abandoned by their owners.[151] This led J. K. Rowling to issue several statements urging Harry Potter fans to refrain from purchasing pet owls.[152] Despite the media flurry, research into the popularity of Harry Potter and sales of owls in
+        the UK failed to find any evidence that the Harry Potter franchise had influenced the buying of owls in the country or the number of owls reaching animal shelters and sanctuaries.[153]
+      </p>
+      <p>
+        Jenny Sawyer wrote in Christian Science Monitor on 25 July 2007 that the books represent a "disturbing trend in commercial storytelling and Western society" in that stories "moral center [sic] have all but vanished from much of today's pop
+        culture ... after 10 years, 4,195 pages, and over 375 million copies, J. K. Rowling's towering achievement lacks the cornerstone of almost all great children's literature: the hero's moral journey". Harry Potter, Sawyer argues, neither faces
+        a "moral struggle" nor undergoes any ethical growth, and is thus "no guide in circumstances in which right and wrong are anything less than black and white".[154] In contrast Emily Griesinger described Harry's first passage through to
+        Platform ​9 3⁄4 as an application of faith and hope, and his encounter with the Sorting Hat as the first of many in which Harry is shaped by the choices he makes. She also noted the "deeper magic" by which the self-sacrifice of Harry's mother
+        protects the boy throughout the series, and which the power-hungry Voldemort fails to understand.[155]
+      </p>
+      <p>
+        In an 8 November 2002 Slate article, Chris Suellentrop likened Potter to a "trust-fund kid whose success at school is largely attributable to the gifts his friends and relatives lavish upon him". Noting that in Rowling's fiction, magical
+        ability potential is "something you are born to, not something you can achieve", Suellentrop wrote that Dumbledore's maxim that "It is our choices that show what we truly are, far more than our abilities" is hypocritical, as "the school that
+        Dumbledore runs values native gifts above all else".[156] In a 12 August 2007, review of Deathly Hallows in The New York Times, however, Christopher Hitchens praised Rowling for "unmooring" her "English school story" from literary precedents
+        "bound up with dreams of wealth and class and snobbery", arguing that she had instead created "a world of youthful democracy and diversity".[157]
+      </p>
+      <p>
+        In 2010, coinciding with the release of the film Harry Potter and the Deathly Hallows Part 1, a series of articles were written about Private Harry Potter of the British army.[158] This real-life Harry Potter was killed in the Arab Revolt
+        near Hebron in 1939. His grave, located in the British cemetery in Ramla, Israel, began to receive curious visitors leading the Ramla Municipality to list it on their website.[159]
+      </p>
+      <p>
+        In 2016, an article written by Diana C. Mutz compares the politics of Harry Potter to the 2016 Donald Trump presidential campaign. She states that 3 themes throughout the books are widely predominant '1) the value of tolerance and respect for
+        difference; 2) opposition to violence and punitiveness; and 3) the dangers of authoritarianism.' She suggests that these themes are also present in the presidential election and it may play a significant role in how Americans have responded
+        to the campaign.
+      </p>
+      <h3>Controversies</h3>
+      <p>
+        The books have been the subject of a number of legal proceedings, stemming from various conflicts over copyright and trademark infringements. The popularity and high market value of the series has led Rowling, her publishers, and film
+        distributor Warner Bros. to take legal measures to protect their copyright, which have included banning the sale of Harry Potter imitations, targeting the owners of websites over the "Harry Potter" domain name, and suing author Nancy Stouffer
+        to counter her accusations that Rowling had plagiarised her work. Various religious fundamentalists have claimed that the books promote witchcraft and religions such as Wicca and are therefore unsuitable for children,[164][165] while a number
+        of critics have criticised the books for promoting various political agendas.[166][167]
+      </p>
+      <p>
+        The books also aroused controversies in the literary and publishing worlds. From 1997 to 1998, Harry Potter and the Philosopher's Stone won almost all the UK awards judged by children, but none of the children's book awards judged by
+        adults,[168] and Sandra Beckett suggested the reason was intellectual snobbery towards books that were popular among children.[169] In 1999, the winner of the Whitbread Book of the Year award children's division was entered for the first time
+        on the shortlist for the main award, and one judge threatened to resign if Harry Potter and the Prisoner of Azkaban was declared the overall winner; it finished second, very close behind the winner of the poetry prize, Seamus Heaney's
+        translation of the Anglo-Saxon epic Beowulf.[169]
+      </p>
+      <p>
+        In 2000, shortly before the publication of Harry Potter and the Goblet of Fire, the previous three Harry Potter books topped The New York Times fiction best-seller list and a third of the entries were children's books. The newspaper created a
+        new children's section covering children's books, including both fiction and non-fiction, and initially counting only hardback sales. The move was supported by publishers and booksellers.[108] In 2004, The New York Times further split the
+        children's list, which was still dominated by Harry Potter books into sections for series and individual books, and removed the Harry Potter books from the section for individual books.[170] The split in 2000 attracted condemnation, praise
+        and some comments that presented both benefits and disadvantages of the move.[171] Time suggested that, on the same principle, Billboard should have created a separate "mop-tops" list in 1964 when the Beatles held the top five places in its
+        list, and Nielsen should have created a separate game-show list when Who Wants to Be a Millionaire? dominated the ratings.
+      </p>
+    </main>
+  </div>
 </body>
-
 </html>
