--- a/pages/s_g.html
+++ b/pages/s_g.html
@@ -11,24 +11,76 @@
 
 <body>
   <aside>
-        <nav class="navigation">
-                <div class="navlink intro"><a href="/index.html">Introduction</a></div>
-                <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
-                <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
-                <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
-                <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
-                <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
-                <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
-                <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
-                <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
-                <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
-                <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
-        </nav>
-    </aside>
-  <h1>
-    Structure and genre
-  </h1>
-  
+    <nav class="navigation">
+      <div class="navlink intro"><a href="/index.html">Introduction</a></div>
+      <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
+      <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
+      <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
+      <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
+      <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
+      <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
+      <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
+      <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
+      <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
+      <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
+    </nav>
+  </aside>
+  <header class="main-header">
+    <h1>Harry Potter</h1>
+  </header>
+  <div id="container">
+    <main class="main_content">
+      <h2>Structure and genre</h2>
+      <p>
+        The Harry Potter novels are mainly directed at a young adult audience as opposed to an audience of middle grade readers, children, or adults. The novels fall within the genre of fantasy literature, and qualify as a type of fantasy called
+        "urban fantasy", "contemporary fantasy", or "low fantasy". They are mainly dramas, and maintain a fairly serious and dark tone throughout, though they do contain some notable instances of tragicomedy and black humour. In many respects, they
+        are also examples of the bildungsroman, or coming of age novel,[37] and contain elements of mystery, adventure, horror, thriller, and romance. The books are also, in the words of Stephen King, "shrewd mystery tales",[38] and each book is
+        constructed in the manner of a Sherlock Holmes-style mystery adventure. The stories are told from a third person limited point of view with very few exceptions (such as the opening chapters of Philosopher's Stone, Goblet of Fire and Deathly
+        Hallows and the first two chapters of Half-Blood Prince).
+      </p>
+      <p>
+        The series can be considered part of the British children's boarding school genre, which includes Rudyard Kipling's Stalky & Co., Enid Blyton's Malory Towers, St. Clare's and the Naughtiest Girl series, and Frank Richards's Billy Bunter
+        novels: the Harry Potter books are predominantly set in Hogwarts, a fictional British boarding school for wizards, where the curriculum includes the use of magic.[39] In this sense they are "in a direct line of descent from Thomas Hughes's
+        Tom Brown's School Days and other Victorian and Edwardian novels of British public school life", though they are, as many note, more contemporary, grittier, darker, and more mature than the typical boarding school novel, addressing serious
+        themes of death, love, loss, prejudice, coming-of-age, and the loss of innocence in a 1990s British setting.[40][41]
+      </p>
+      <p>
+        The Harry Potter stories feature much medieval imagery and motifs drawn from the King Arthur stories. Hogwarts resembles a medieval university-cum-castle with several professors who belonging to an Order of Merlin; Old Professor Binns still
+        lectures about the International Warlock Convention of 1289; and a real historical person, a 14th century scribe Sir Nicolas Flamel, is described as a holder of the Philosopher's Stone.[42] Other medieval elements in Hogwarts include
+        coats-of-arms and medieval weapons on the walls, letters written on parchment and sealed with wax, the Great Hall of Hogwarts which is similar to the Great Hall of Camelot, the use of Latin phrases, the tents put up for Quidditch tournaments
+        are similar to the "marvellous tents" put up for knightly tournaments, imaginary animals like dragons and unicorns which exist around Hogwarts, and the banners with heraldic animals for the four Houses of Hogwarts.[42]
+      </p>
+      <p>
+        Many of the motifs of the Potter stories such as the hero's quest invoking objects that confer invisibility, magical animals and trees, a forest full of danger and the recognition of a character based upon scars are drawn from medieval French
+        Arthurian romances.[42] Other aspects borrowed from French Arthurian romances include the use of owls as messengers, werewolves as characters, and white deer.[43] The American scholars Heather Arden and Kathrn Lorenz in particular argue that
+        many aspects of the Potter stories are inspired by a 14th century French Arthurian romance, Claris et Laris, writing of the "startling" similarities between the adventures of Potter and the knight Claris.[42] Arden and Lorenz noted that
+        Rowling graduated from the University of Exeter in 1986 with a degree in French literature and spent a year living in France afterwards.[43]
+      </p>
+      <p>
+        Arnden and Lorenz wrote about the similarity between the Arthurian romances, where Camelot is a place of wonder and safety, and from where the heroic knights must venture forth facing various perils, usually in an enchanted forest; and
+        Hogwarts, likewise a wondrous safe place, where Harry Potter and friends must periodically venture forth from to the magical forest that surrounds Hogwarts.[43] In the same way that knights in the Arthurian romances usually have a female
+        helper, who is very intelligent and has a connection with nature, Harry has Hermione who plays a similar role.[43]
+      </p>
+      <p>
+        Like an Arthurian knight, Harry receives advice and encouragement from his mentor, Albus Dumbledore, who resembles both Merlin and King Arthur, but must vanquish his foes alone.[43] Arnden and Lorenz wrote that with Rowling's books, the
+        characters are "...not a simple reworking of the well-known heroes of romance, but a protean melding of different characters to form new ones...".[43] However, Lorenz and Arnden argue the main inspiration for Harry Potter was Sir Percival,
+        one of the Knights of the Round Table who searches for the Holy Grail.[43] Both Potter and Sir Percival had an "orphaned or semi-orphaned youth, with inherent nobility and powers", being raised by relatives who tried to keep them away from
+        the places where they really belong, Hogwarts and Camelot respectively.[43]
+      </p>
+      <p>
+        Both Percival and Potter are however outsiders in the places that they belong, unfamiliar with the rules of knighthood and magic, but both show extraordinary natural abilities with Percival proving himself an exceptional fighter while Potter
+        is an excellent player of Quidditch.[43] And finally, both Percival and Potter found love and acceptance from surrogate families, in the form of the Knights of the Round Table and the Weasley family respectively.[43]
+      </p>
+      <p>
+        Each of the seven books is set over the course of one school year. Harry struggles with the problems he encounters, and dealing with them often involves the need to violate some school rules. If students are caught breaking rules, they are
+        often disciplined by Hogwarts professors. The stories reach their climax in the summer term, near or just after final exams, when events escalate far beyond in-school squabbles and struggles, and Harry must confront either Voldemort or one of
+        his followers, the Death Eaters, with the stakes a matter of life and death – a point underlined, as the series progresses, by characters being killed in each of the final four books.[44][45] In the aftermath, he learns important lessons
+        through exposition and discussions with head teacher and mentor Albus Dumbledore. The only exception to this school-centred setting is the final novel, Harry Potter and the Deathly Hallows, in which Harry and his friends spend most of their
+        time away from Hogwarts, and only return there to face Voldemort at the dénouement.
+      </p>
+    </main>
+  </div>
+
 </body>
 
 </html>
