--- a/pages/supplementary.html
+++ b/pages/supplementary.html
@@ -11,23 +11,59 @@
 
 <body>
   <aside>
-        <nav class="navigation">
-                <div class="navlink intro"><a href="/index.html">Introduction</a></div>
-                <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
-                <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
-                <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
-                <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
-                <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
-                <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
-                <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
-                <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
-                <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
-                <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
-        </nav>
-    </aside>
-  <h1>
-    Supplementary
-  </h1>
+    <nav class="navigation">
+      <div class="navlink intro"><a href="/index.html">Introduction</a></div>
+      <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
+      <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
+      <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
+      <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
+      <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
+      <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
+      <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
+      <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
+      <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
+      <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
+    </nav>
+  </aside>
+  <header class="main-header">
+    <h1>Harry Potter</h1>
+  </header>
+  <div id="container">
+    <main class="main_content">
+      <h2>Supplementary works</h2>
+      <h3>Harry Potter and the Cursed Child</h3>
+      <p>
+        Harry Potter and the Cursed Child is a two-part West End stage play.[23] It was written by Jack Thorne, based on a story by J. K. Rowling, Thorne and director John Tiffany. The play opened on 30 July 2016 at the Palace Theatre, London,
+        England. The script was released on 31 July 2016.[24] The story is set nineteen years after the ending of Harry Potter and the Deathly Hallows and follows Harry Potter, now a Ministry of Magic employee, and his younger son Albus Severus
+        Potter. The play's official synopsis was released on 23 October 2015:
+      </p>
+      <p class="grey_font">
+        It was always difficult being Harry Potter and it isn't much easier now that he is an overworked employee of the Ministry of Magic, a husband, and father of three school-age children.
+      </p>
+      <p class="grey_font">
+        While Harry grapples with a past that refuses to stay where it belongs, his youngest son Albus must struggle with the weight of a family legacy he never wanted. As past and present fuse ominously, both father and son learn the uncomfortable
+        truth: sometimes, darkness comes from unexpected places.
+      </p>
+      <h3>In-universe books</h3>
+      <p>
+        Rowling has expanded the Harry Potter universe with several short books produced for various charities.[26][27] In 2001, she released Fantastic Beasts and Where to Find Them (a purported Hogwarts textbook) and Quidditch Through the Ages (a
+        book Harry reads for fun). Proceeds from the sale of these two books benefited the charity Comic Relief.[28] In 2007, Rowling composed seven handwritten copies of The Tales of Beedle the Bard, a collection of fairy tales that is featured in
+        the final novel, one of which was auctioned to raise money for the Children's High Level Group, a fund for mentally disabled children in poor countries. The book was published internationally on 4 December 2008.[29][30] Rowling also wrote an
+        800-word prequel in 2008 as part of a fundraiser organised by the bookseller Waterstones. All three of these books contain extra information about the wizarding world not included in the original novels.
+      </p>
+      <p>
+        In 2016, she released three new e-books: Hogwarts: An Incomplete and Unreliable Guide, Short Stories from Hogwarts of Power, Politics and Pesky Poltergeists and Short Stories from Hogwarts of Heroism, Hardship and Dangerous Hobbies.
+      </p>
+      <h3>Pottermore website</h3>
+      <p>
+        In 2011, Rowling launched a new website announcing an upcoming project called Pottermore.[33] Pottermore opened to the general public on 14 April 2012.[34] Pottermore allows users to be sorted, be chosen by their wand and play various
+        minigames. The main purpose of the website was to allow the user to journey though the story with access to content not revealed by JK Rowling previously, with over 18,000 words of additional content.
+      </p>
+      <p>
+        In September 2015, the website was completely overhauled and most of the features were removed. The site has been redesigned and it mainly focuses on the information already available, rather than exploration.
+      </p>
+    </main>
+  </div>
 </body>
 
 </html>
