--- a/pages/themes.html
+++ b/pages/themes.html
@@ -11,23 +11,58 @@
 
 <body>
   <aside>
-        <nav class="navigation">
-                <div class="navlink intro"><a href="/index.html">Introduction</a></div>
-                <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
-                <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
-                <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
-                <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
-                <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
-                <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
-                <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
-                <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
-                <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
-                <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
-        </nav>
-    </aside>
-  <h1>
-    Themes
-  </h1>
+    <nav class="navigation">
+      <div class="navlink intro"><a href="/index.html">Introduction</a></div>
+      <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
+      <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
+      <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
+      <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
+      <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
+      <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
+      <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
+      <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
+      <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
+      <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
+    </nav>
+  </aside>
+  <header class="main-header">
+    <h1>Harry Potter</h1>
+  </header>
+  <div id="container">
+    <main class="main_content">
+      <h2>Themes</h2>
+      <p>
+        According to Rowling, a major theme in the series is death: "My books are largely about death. They open with the death of Harry's parents. There is Voldemort's obsession with conquering death and his quest for immortality at any price, the
+        goal of anyone with magic. I so understand why Voldemort wants to conquer death. We're all frightened of it."[6]
+      </p>
+      <p>
+        Rowling stated that "Harry Potter books have always, in fact, dealt explicitly with religious themes and questions" and that she did not reveal its Christian parallels in the beginning because doing so would have "give[n] too much away to
+        fans who might then see the parallels."[46] In the final book of the series Harry Potter and the Deathly Hallows, Rowling makes the book's Christian imagery more explicit, quoting both Matthew 6:21 and 1 Corinthians 15:26 (King James Version)
+        when Harry visits his parents' graves.[46]
+      </p>
+      <p>
+        Hermione Granger teaches Harry Potter that the meaning of these verses from the Christian Bible are "living beyond death. Living after death", which Rowling states is "one of the central foundations of resurrection theology" and that these
+        bible verses "epitomize the whole series".[46][47][48] Rowling also exhibits Christian values in developing Albus Dumbledore as a God-like character, the divine, trusted leader of the series, guiding the long-suffering hero along his quest.
+        In the seventh novel, Harry speaks with and questions the deceased Dumbledore much like a person of faith would talk to and question God.[49]
+      </p>
+      <p>
+        Academics and journalists have developed many other interpretations of themes in the books, some more complex than others, and some including political subtexts. Themes such as normality, oppression, survival, and overcoming imposing odds
+        have all been considered as prevalent throughout the series.[50] Similarly, the theme of making one's way through adolescence and "going over one's most harrowing ordeals – and thus coming to terms with them" has also been considered.[51]
+        Rowling has stated that the books comprise "a prolonged argument for tolerance, a prolonged plea for an end to bigotry" and that they also pass on a message to "question authority and... not assume that the establishment or the press tells
+        you all of the truth".[52]
+      </p>
+      <p>
+        While the books could be said to comprise many other themes, such as power/abuse of power, violence and hatred, love, loss, prejudice, and free choice, they are, as Rowling states, "deeply entrenched in the whole plot"; the writer prefers to
+        let themes "grow organically", rather than sitting down and consciously attempting to impart such ideas to her readers.[7] Along the same lines is the ever-present theme of adolescence, in whose depiction Rowling has been purposeful in
+        acknowledging her characters' sexualities and not leaving Harry, as she put it, "stuck in a state of permanent pre-pubescence". Rowling has also been praised for her nuanced depiction of the ways in which death and violence affects youth, and
+        humanity as a whole.[53]
+      </p>
+      <p>
+        Rowling said that, to her, the moral significance of the tales seems "blindingly obvious". The key for her was the choice between what is right and what is easy, "because that ... is how tyranny is started, with people being apathetic and
+        taking the easy route and suddenly finding themselves in deep trouble."
+      </p>
+    </main>
+  </div>
 </body>
 
 </html>
