--- a/pages/achievenments.html
+++ b/pages/achievenments.html
@@ -11,24 +11,100 @@
 
 <body>
   <aside>
-        <nav class="navigation">
-                <div class="navlink intro"><a href="/index.html">Introduction</a></div>
-                <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
-                <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
-                <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
-                <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
-                <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
-                <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
-                <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
-                <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
-                <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
-                <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
-        </nav>
-    </aside>
-  <h1>
-    Achievements
-  </h1>
-  
+    <nav class="navigation">
+      <div class="navlink intro"><a href="/index.html">Introduction</a></div>
+      <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
+      <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
+      <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
+      <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
+      <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
+      <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
+      <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
+      <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
+      <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
+      <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
+    </nav>
+  </aside>
+  <header class="main-header">
+    <h1>Harry Potter</h1>
+  </header>
+  <div id="container">
+    <main class="main_content">
+      <h2>Achievements</h2>
+      <h3>Cultural impact</h3>
+      <div class="img1" <figure>
+        <img src="../img/platform.jpg" alt="platform_9_3/4">
+        <figcaption>
+          "Platform ​9 3⁄4" sign on London King's Cross railway station
+        </figcaption>
+        </figure>
+      </div>
+      <p>
+        Fans of the series were so eager for the latest instalment that bookstores around the world began holding events to coincide with the midnight release of the books, beginning with the 2000 publication of Harry Potter and the Goblet of Fire.
+        The events, commonly featuring mock sorting, games, face painting, and other live entertainment have achieved popularity with Potter fans and have been highly successful in attracting fans and selling books with nearly nine million of the
+        10.8 million initial print copies of Harry Potter and the Half-Blood Prince sold in the first 24 hours.
+      </p>
+      <p>
+        The final book in the series, Harry Potter and the Deathly Hallows became the fastest selling book in history, moving 11 million units in the first twenty-four hours of release.[95] The series has also gathered adult fans, leading to the
+        release of two editions of each Harry Potter book, identical in text but with one edition's cover artwork aimed at children and the other aimed at adults.[96] Besides meeting online through blogs, podcasts, and fansites, Harry Potter
+        super-fans can also meet at Harry Potter symposia.
+      </p>
+      <p>
+        The word Muggle has spread beyond its Harry Potter origins, becoming one of few pop culture words to land in the Oxford English Dictionary.[97] The Harry Potter fandom has embraced podcasts as a regular, often weekly, insight to the latest
+        discussion in the fandom. Both MuggleCast and PotterCast[98] have reached the top spot of iTunes podcast rankings and have been polled one of the top 50 favourite podcasts.[99]
+      </p>
+      <p>
+        Some lessons identified in the series include diversity, acceptance, political tolerance, and equality. Surveys of over 1,000 college students in the United States show that those who read the books were significantly different from those who
+        had not. Readers of the series were found to be more tolerant, more opposed to violence and torture, less authoritarian, and less cynical. Although it is not known if this is a cause-and-effect relationship, there is a clear correlation, and
+        it seems that Harry Potter's cultural impact may be stronger than just a fandom bond.
+      </p>
+      <p>
+        Many fan fiction and fan art works about Harry Potter have been made. In March 2007, "Harry Potter" was the most commonly searched fan fiction subject on the internet.[101] At the University of Michigan in 2009, StarKid Productions performed
+        an original musical parodying the Harry Potter series called A Very Potter Musical. The musical was awarded Entertainment Weekly's 10 Best Viral Videos of 2009.[102]
+      </p>
+      <p>
+        The sport Quidditch, played by characters in the Harry Potter series, was created in 2005 and is played worldwide.[103] Characters and elements from the series have inspired scientific names of several organisms, including the dinosaur
+        Dracorex hogwartsia, the spider Eriovixia gryffindori, the wasp Ampulex dementor, and the crab Harryplax severus.
+      </p>
+      <h3>Commercial success</h3>
+      <div class="img1" <figure>
+        <img src="../img/fan_base.jpg" alt="lines_outside_stores">
+        <figcaption>
+          Crowd outside a book store for the midnight release of Harry Potter and the Half-Blood Prince.
+        </figcaption>
+        </figure>
+      </div>
+      <p>
+        The popularity of the Harry Potter series has translated into substantial financial success for Rowling, her publishers, and other Harry Potter related license holders. This success has made Rowling the first and thus far only billionaire
+        author.[105] The books have sold more than 500 million copies worldwide and have also given rise to the popular film adaptations produced by Warner Bros., all of which have been highly successful in their own right.[106][107] The films have
+        in turn spawned eight video games and have led to the licensing of more than 400 additional Harry Potter products. The Harry Potter brand has been estimated to be worth as much as $25 billion.[4]
+      </p>
+      <p>
+        The great demand for Harry Potter books motivated The New York Times to create a separate best-seller list for children's literature in 2000, just before the release of Harry Potter and the Goblet of Fire. By 24 June 2000, Rowling's novels
+        had been on the list for 79 straight weeks; the first three novels were each on the hardcover best-seller list.[108] On 12 April 2007, Barnes & Noble declared that Deathly Hallows had broken its pre-order record, with more than 500,000 copies
+        pre-ordered through its site.[109] For the release of Goblet of Fire, 9,000 FedEx trucks were used with no other purpose than to deliver the book.[110]
+      </p>
+      <p>
+        Together, Amazon.com and Barnes & Noble pre-sold more than 700,000 copies of the book.[110] In the United States, the book's initial printing run was 3.8 million copies.[110] This record statistic was broken by Harry Potter and the Order of
+        the Phoenix, with 8.5 million, which was then shattered by Half-Blood Prince with 10.8 million copies.[111] 6.9 million copies of Prince were sold in the U.S. within the first 24 hours of its release; in the United Kingdom more than two
+        million copies were sold on the first day.[112] The initial U.S. print run for Deathly Hallows was 12 million copies, and more than a million were pre-ordered through Amazon and Barnes & Noble.
+      </p>
+      <h3>Awards, honours, and recognition</h3>
+      <p>
+        The Harry Potter series has been recognised by a host of awards since the initial publication of Philosopher's Stone including four Whitaker Platinum Book Awards (all of which were awarded in 2001),[114] three Nestlé Smarties Book Prizes
+        (1997–1999),[115] two Scottish Arts Council Book Awards (1999 and 2001),[116] the inaugural Whitbread children's book of the year award (1999),[117] the WHSmith book of the year (2006),[118] among others. In 2000, Harry Potter and the
+        Prisoner of Azkaban was nominated for a Hugo Award for Best Novel, and in 2001, Harry Potter and the Goblet of Fire won said award.[119] Honours include a commendation for the Carnegie Medal (1997),[120] a short listing for the Guardian
+        Children's Award (1998), and numerous listings on the notable books, editors' Choices, and best books lists of the American Library Association, The New York Times, Chicago Public Library, and Publishers Weekly.[121]
+      </p>
+      <p>
+        In 2002, British sociologist Andrew Blake named Harry Potter among the icons of British popular culture along with the likes of James Bond and Sherlock Holmes.[122] In 2003, four of the books were named in the top 24 of the BBC's The Big Read
+        survey of the best loved novels in the UK.[123] A 2004 study found that books in the series were commonly read aloud in elementary schools in San Diego County, California.[124] Based on a 2007 online poll, the U.S. National Education
+        Association listed the series in its "Teachers' Top 100 Books for Children".[125] Three of the books placed among the "Top 100 Chapter Books" of all time, or children's novels, in a 2012 survey published by School Library Journal: Sorcerer's
+        Stone ranked number three, Prisoner of Azkaban 12th, and Goblet of Fire 98th.[126] In 2012, the opening ceremony of the 2012 Summer Olympics in London featured a 100-foot tall rendition of Lord Voldemort in a segment designed to show off the
+        UK's cultural icons.
+      </p>
+    </main>
+  </div>
 </body>
 
 </html>
