--- a/pages/attractions.html
+++ b/pages/attractions.html
@@ -11,23 +11,58 @@
 
 <body>
   <aside>
-        <nav class="navigation">
-                <div class="navlink intro"><a href="/index.html">Introduction</a></div>
-                <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
-                <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
-                <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
-                <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
-                <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
-                <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
-                <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
-                <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
-                <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
-                <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
-        </nav>
-    </aside>
-  <h1>
-    Attractions
-  </h1>
+    <nav class="navigation">
+      <div class="navlink intro"><a href="/index.html">Introduction</a></div>
+      <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
+      <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
+      <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
+      <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
+      <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
+      <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
+      <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
+      <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
+      <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
+      <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
+    </nav>
+  </aside>
+  <header class="main-header">
+    <h1>Harry Potter</h1>
+  </header>
+  <div id="container">
+    <main class="main_content">
+      <h2>Attractions</h2>
+      <h3>The Wizarding World of Harry Potter</h3>
+      <div class="img1" <figure>
+        <img src="../img/wizarding_world.jpg" alt="Hogwarts_castle">
+        <figcaption>
+          Hogwarts Castle as depicted in the Wizarding World of Harry Potter, located in Universal Orlando Resort's Island of Adventure.
+        </figcaption>
+        </figure>
+      </div>
+
+      <p>
+        After the success of the films and books, Universal and Warner Brothers announced they would create The Wizarding World of Harry Potter, a new Harry Potter-themed expansion to the Islands of Adventure theme park at Universal Orlando Resort in
+        Florida. The land officially opened to the public on 18 June 2010.[215] It includes a re-creation of Hogsmeade and several rides. The flagship attraction is Harry Potter and the Forbidden Journey, which exists within a re-creation of Hogwarts
+        School of Witchcraft and Wizardry. Other rides include Dragon Challenge, a pair of inverted roller coasters, and Flight of the Hippogriff, a family roller coaster.
+      </p>
+      <p>
+        Four years later, on 8 July 2014, Universal opened a Harry Potter-themed area at the Universal Studios Florida theme park. It includes a re-creation of Diagon Alley and connecting alleys and a small section of Muggle London. The flagship
+        attraction is Harry Potter and the Escape from Gringotts roller coaster ride. Universal also added a completely functioning recreation of the Hogwarts Express connecting Kings Cross Station at Universal Studios Florida to the Hogsmeade
+        station at Islands of Adventure. Both Hogsmeade and Diagon Alley contain many shops and restaurants from the book series, including Weasley's Wizard Wheezes and The Leaky Cauldron.
+      </p>
+      <p>
+        On 15 July 2014, The Wizarding World of Harry Potter opened at the Universal Studios Japan theme park in Osaka, Japan. It includes the village of Hogsmeade, Harry Potter and the Forbidden Journey ride, and Flight of the Hippogriff roller
+        coaster.
+      </p>
+      <p>
+        On 7 April 2016, The Wizarding World of Harry Potter opened at the Universal Studios Hollywood theme park near Los Angeles, California.
+      </p>
+      <h3>The Making of Harry Potter</h3>
+      <p>
+        In March 2011, Warner Bros. announced plans to build a tourist attraction in the United Kingdom to showcase the Harry Potter film series. The Making of Harry Potter is a behind-the-scenes walking tour featuring authentic sets, costumes and props from the film series. The attraction is located at Warner Bros. Studios, Leavesden, where all eight of the Harry Potter films were made. Warner Bros. constructed two new sound stages to house and showcase the famous sets from each of the British-made productions, following a £100 million investment.[220] It opened to the public in March 2012.
+      </p>
+    </main>
+  </div>
 </body>
 
 </html>
